@@ -1,3 +1,5 @@
 # Acromag IP231 DAC driver and device support
 device(ao, INST_IO, devAoIP231, "IP231")
 driver(drvIP231)
+registrar(drvIP231Registrar)
+variable( IP231_DRV_DEBUG, int )
